--- a/djangoproject/gestion_stock/templates/destinatairemodify.html
+++ b/djangoproject/gestion_stock/templates/destinatairemodify.html
@@ -417,6 +417,7 @@
                     'comp2': $('#adrl_cc').val(),
                     'codepost': $('#codep_1').val(),
                     'ville': $('#codep_2').val(),
+                    'pays': $('#paysid').val(),
 
                     csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
