--- a/djangoproject/gestion_stock/templates/bonlivraisonentreemodify.html
+++ b/djangoproject/gestion_stock/templates/bonlivraisonentreemodify.html
@@ -142,7 +142,7 @@
         </div>
         <div class="col-5">
             <div class="border shadow-lg p-2 mb-3 bg-white rounded">
-                <h5 class="text-center"> <u>Unités de manutention entrée </u></h5>
+                <h5 class="text-center"> <u>Unitées de manutention entrée </u></h5>
                 <div class="container">
                     <div class="table-responsive">
                         <table id="tabume" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
@@ -159,11 +159,16 @@
                             {% for items in umentree %}
                             {% if items.fk_BonLivraisonEntree.idBonLivraisonEntree == id %}
                             <tr>
-                                <td> <button id='{{ items.idBonLivraisonEntree }}' class="dyna"> -> </button></td>
+                                <td> <a href='{% url "unitemanutentionentreemodify" %}?id={{ items.idUniteManutentionEntree}}'><button id='{{ items.idBonLivraisonEntree }}' class="dyna"> -> </button></a></td>
                                 <td> {{ items.numero }} </td>
-                                <td> {{ items.fk_ZoneDepot }} </td>
-                                <td> {{ items. }} </td>
-                                <td> <button id='{{ items.idBonLivraisonEntree  }}' class="dynad"> X </button> </td>
+                                <td> {{ items.fk_BonLivraisonEntree.fk_ZoneDepot_pour_TypeZoneDepot }} </td>
+                                {% for items in umentree %}
+
+                                {% if items.fk_BonLivraisonEntree.idBonLivraisonEntree == id %}
+                                <td> a faire{{ items. }} </td>
+                                {% endif %}
+                                {% endfor %}
+                                <td> <button id='{{ items.idUniteManutentionEntree  }}' class="dynad"> X </button> </td>
                             </tr>
                             {% endif %}
                             {% endfor %}
@@ -397,6 +402,25 @@
                 }
             });
         });
+
+        $("#addume").click(function () {
+            $.ajax({
+                type: "POST",    //type de requête utilisé par ajax
+                url: "/bonLivraisonentree/modify/createume/", //lien de la view qui gère la requête post
+                data: {
+                    'id': $('#umid').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function (msg, data, settings) {
+                    console.log("gg " + msg);
+                    location.reload();
+                },
+                failure: function () {
+                    console.log("fail");
+                }
+            });
+        });
+
 
         $(".fa-chevron-circle-left").click(function () {
             $.ajax({
